fix(android): fix crash on startup
- Add OneSignal Gradle plugin to build.gradle.kts
- Fix splash_config.json to use static type without missing assets
- Set autoHide: true for fast splash transition
- Remove references to non-existent Lottie animation files
- Reset ONESIGNAL_APP_ID to placeholder for public repo

--- a/android/app/src/main/assets/splash_config.json
+++ b/android/app/src/main/assets/splash_config.json
@@ -1,18 +1,18 @@
 {
-    "type": "lottie",
+    "type": "static",
     "backgroundColor": "#0F172A",
     "logo": {
-        "src": "splash_logo.png",
+        "src": "",
         "width": 150,
         "height": 150,
-        "animation": "fade-scale"
+        "animation": "none"
     },
     "lottie": {
-        "src": "splash_animation.json",
+        "src": "",
         "width": 300,
         "height": 300,
         "loop": false,
-        "autoPlay": true
+        "autoPlay": false
     },
     "text": {
         "content": "",
@@ -20,7 +20,7 @@
         "fontSize": 16,
         "animation": "none"
     },
-    "duration": 3000,
+    "duration": 500,
     "transition": "fade",
-    "autoHide": false
+    "autoHide": true
 }
